<resources>
    <string name="app_name">Scatterbrain Router</string>
    <string name="title_power">Router status</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scatterbrain Router</string>
    <string name="nav_header_subtitle">reference implementation version: </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="powersave_table">Router status:</string>
    <string name="no_apps">No Scatterbrain enabled apps found.</string>
    <string name="title_identity">Identity Management</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_power">Router status</string>
    <string name="menu_about">About</string>
    <string name="bluetooth_disabled_snackbar">Bluetooth is disabled! Scatterbrain cannot run.</string>
    <string name="wifi_disabled_snackbar">Wifi is disabled, Scatterbrain will be abnormally slow.</string>
    <string name="power_header">Power Management</string>
    <string name="general_header">General</string>
    <string name="identity_share_title">Identity share cap</string>
    <string name="message_share_title">Message share cap</string>
    <string name="incognito_title">Incognito mode</string>
    <string name="sizecap_title">Datastore max size (MB)</string>
    <string name="incognito_summary_on">Takes actions to protoct your privacy that may limit performance</string>
    <string name="incognito_summary_off">Takes actions to maximize performance at the expenese of privacy</string>
    <string name="power_mode_title">Power saving mode</string>
    <string-array name="power_modes">
        <item>Active</item>
        <item>Opportunistic</item>
        <item>Passive</item>
    </string-array>
    <string-array name="power_modes_vals">
        <item>@string/powersave_active</item>
        <item>@string/powersave_opportunistic</item>
        <item>@string/powersave_passive</item>
    </string-array>
    <string name="pref_enabled">power_enabled</string>
    <string name="create_hint">Display Name</string>
    <string name="create_dialog_title">Generate new identity</string>
    <string name="create_cancel">Cancel</string>
    <string name="create_create">Generate</string>
    <string name="chip_owned">Owned!</string>
    <string name="permission_hint">Select apps…</string>
    <string name="permission_subtext">Edit app permissions for this identity</string>
    <string name="service_not_connected">Service not connected…</string>
    <string name="noid">No identities in datastore</string>
    <string name="grant_location_text">Scatterbrain needs location permission in order to scan for bluetooth and wifi when the app is closed.
    this is used to discover other scatterbrain devices to communicate with.</string>
    <string name="strongly_assert">Scatterbrain needs permission to scan for and interact with nearby bluetooth devices.
        Bluetooth will NEVER be used to collect or track location</string>
    <string name="failed_location_text">If location permission is not granted, scatterbrain will only function in passive mode</string>
    <string name="failed_strongly_assert">If bluetooth permission is not granted scatterbrain will not function correctly.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disable_doze_text">Scatterbrain needs permission to disable battery optimizations. This allows scatterbrain to forward and receive messages in the background.</string>
    <string name="default_web_client_id" translatable="false">913979738892-6pmfrf29ba5ha2lg6kjioh5tic16s990.apps.googleusercontent.com</string>
    <string name="gcm_defaultSenderId" translatable="false">913979738892</string>
    <string name="google_api_key" translatable="false">AIzaSyBFXq0uLhrDUatXZ1BtsfKoG_PDm4-eEHk</string>
    <string name="google_app_id" translatable="false">1:913979738892:android:4b93892f3921e1b2f95729</string>
    <string name="google_crash_reporting_api_key" translatable="false">AIzaSyBFXq0uLhrDUatXZ1BtsfKoG_PDm4-eEHk</string>
    <string name="google_storage_bucket" translatable="false">scatterroutingservice.appspot.com</string>
    <string name="project_id" translatable="false">scatterroutingservice</string>
    <string name="pref_enable_crashlytics">enableCrashlytics</string>
    <string name="pref_enable_crashlytics_title">Opt-in to crash reporting spyware</string>
    <string name="pref_enable_crashlyting_desc">Crashlytics helps me debug issues with scatterbrain, but requires sending data to google. A restart is required to disable after enabling.</string>
    <string name="privacy_link">
        Scatterbrain Router is free software! You too can contribute at <a href="https://github.com/Scatterbrain-DTN/">https://github.com/Scatterbrain-DTN/</a>\n\n

        While we try not to collect any data, in the unlikely event that we accidentally do your data is protected by our <a href="https://scatterbrain-dtn.github.io/privacy">Privacy policy</a>\n\n

        THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS\'\' AND ANY EXPRESS OR IMPLIED WARRANTIES,
        INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A
        PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT,
        INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
        PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
        HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
        (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
        OF THE POSSIBILITY OF SUCH DAMAGE.
    </string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>