<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_power"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/menu_power" />
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/action_settings"/>
        <item
            android:id="@+id/navigation_identity"
            android:icon="@drawable/ic_baseline_perm_identity_24"
            android:title="@string/title_identity"
            />

        <item
            android:id="@+id/navigation_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about"
            />

    </group>
</menu>